--- a/public/themes/chasenet/assets/css/theme.less
+++ b/public/themes/chasenet/assets/css/theme.less
@@ -26,6 +26,7 @@ body{
             background-color: transparent;
             height: 45px;
             border-radius: 0px;
+            margin-left: -20px;
 
             ul{
                 &.navbar-nav{
